languages/html/umc_html_parser/src/lexer/snapshots/umc_html__lexer__test__no_closing_tag_for_embedded_content.snap
---
source: languages/html/umc_html_parser/src/lexer/mod.rs
expression: test(HTML_STRING)
---
Tokens: [
    Token {
        kind: TagStart,
        start: 0,
        end: 1,
    },
    Token {
        kind: ElementName,
        start: 1,
        end: 7,
    },
    Token {
        kind: TagEnd,
        start: 7,
        end: 8,
    },
    Token {
        kind: TextContent,
        start: 8,
        end: 22,
    },
    Token {
        kind: Eof,
        start: 22,
        end: 22,
    },
]
Errors: [
    OxcDiagnostic {
        inner: OxcDiagnosticInner {
            message: "Expected </script, but found EOF",
            labels: Some(
                [
                    LabeledSpan {
                        label: None,
                        span: SourceSpan {
                            offset: SourceOffset(
                                22,
                            ),
                            length: 0,
                        },
                        primary: false,
                    },
                ],
            ),
            help: None,
            severity: Error,
            code: OxcCode {
                scope: None,
                number: None,
            },
            url: None,
        },
    },
]
