languages/html/umc_html_parser/src/lexer/snapshots/umc_html__lexer__test__process_embedded_content.snap
---
source: languages/html/umc_html_parser/src/lexer/mod.rs
expression: test(HTML_STRING)
---
[
    Html5Token {
        kind: TextContent,
        start: 0,
        end: 6,
    },
    Html5Token {
        kind: Doctype,
        start: 6,
        end: 15,
    },
    Html5Token {
        kind: Whitespace,
        start: 15,
        end: 16,
    },
    Html5Token {
        kind: Attribute,
        start: 16,
        end: 20,
    },
    Html5Token {
        kind: TagEnd,
        start: 20,
        end: 21,
    },
    Html5Token {
        kind: TextContent,
        start: 21,
        end: 22,
    },
    Html5Token {
        kind: TagStart,
        start: 22,
        end: 23,
    },
    Html5Token {
        kind: ElementName,
        start: 23,
        end: 27,
    },
    Html5Token {
        kind: Whitespace,
        start: 27,
        end: 28,
    },
    Html5Token {
        kind: Attribute,
        start: 28,
        end: 32,
    },
    Html5Token {
        kind: Eq,
        start: 32,
        end: 33,
    },
    Html5Token {
        kind: Attribute,
        start: 33,
        end: 37,
    },
    Html5Token {
        kind: TagEnd,
        start: 37,
        end: 38,
    },
    Html5Token {
        kind: TextContent,
        start: 38,
        end: 39,
    },
    Html5Token {
        kind: TagStart,
        start: 39,
        end: 40,
    },
    Html5Token {
        kind: ElementName,
        start: 40,
        end: 44,
    },
    Html5Token {
        kind: TagEnd,
        start: 44,
        end: 45,
    },
    Html5Token {
        kind: TextContent,
        start: 45,
        end: 48,
    },
    Html5Token {
        kind: TagStart,
        start: 48,
        end: 49,
    },
    Html5Token {
        kind: ElementName,
        start: 49,
        end: 53,
    },
    Html5Token {
        kind: Whitespace,
        start: 53,
        end: 54,
    },
    Html5Token {
        kind: Attribute,
        start: 54,
        end: 61,
    },
    Html5Token {
        kind: Eq,
        start: 61,
        end: 62,
    },
    Html5Token {
        kind: Attribute,
        start: 62,
        end: 69,
    },
    Html5Token {
        kind: TagEnd,
        start: 69,
        end: 70,
    },
    Html5Token {
        kind: TextContent,
        start: 70,
        end: 73,
    },
    Html5Token {
        kind: TagStart,
        start: 73,
        end: 74,
    },
    Html5Token {
        kind: ElementName,
        start: 74,
        end: 78,
    },
    Html5Token {
        kind: Whitespace,
        start: 78,
        end: 79,
    },
    Html5Token {
        kind: Attribute,
        start: 79,
        end: 83,
    },
    Html5Token {
        kind: Eq,
        start: 83,
        end: 84,
    },
    Html5Token {
        kind: Attribute,
        start: 84,
        end: 94,
    },
    Html5Token {
        kind: Whitespace,
        start: 94,
        end: 95,
    },
    Html5Token {
        kind: Attribute,
        start: 95,
        end: 102,
    },
    Html5Token {
        kind: Eq,
        start: 102,
        end: 103,
    },
    Html5Token {
        kind: Attribute,
        start: 103,
        end: 142,
    },
    Html5Token {
        kind: TagEnd,
        start: 142,
        end: 143,
    },
    Html5Token {
        kind: TextContent,
        start: 143,
        end: 146,
    },
    Html5Token {
        kind: TagStart,
        start: 146,
        end: 147,
    },
    Html5Token {
        kind: ElementName,
        start: 147,
        end: 152,
    },
    Html5Token {
        kind: TagEnd,
        start: 152,
        end: 153,
    },
    Html5Token {
        kind: TextContent,
        start: 153,
        end: 161,
    },
    Html5Token {
        kind: CloseTagStart,
        start: 161,
        end: 163,
    },
    Html5Token {
        kind: ElementName,
        start: 163,
        end: 168,
    },
    Html5Token {
        kind: TagEnd,
        start: 168,
        end: 169,
    },
    Html5Token {
        kind: TextContent,
        start: 169,
        end: 170,
    },
    Html5Token {
        kind: CloseTagStart,
        start: 170,
        end: 172,
    },
    Html5Token {
        kind: ElementName,
        start: 172,
        end: 176,
    },
    Html5Token {
        kind: TagEnd,
        start: 176,
        end: 177,
    },
    Html5Token {
        kind: TextContent,
        start: 177,
        end: 178,
    },
    Html5Token {
        kind: TagStart,
        start: 178,
        end: 179,
    },
    Html5Token {
        kind: ElementName,
        start: 179,
        end: 183,
    },
    Html5Token {
        kind: TagEnd,
        start: 183,
        end: 184,
    },
    Html5Token {
        kind: TextContent,
        start: 184,
        end: 187,
    },
    Html5Token {
        kind: TagStart,
        start: 187,
        end: 188,
    },
    Html5Token {
        kind: ElementName,
        start: 188,
        end: 194,
    },
    Html5Token {
        kind: TagEnd,
        start: 194,
        end: 195,
    },
    Html5Token {
        kind: TextContent,
        start: 195,
        end: 254,
    },
    Html5Token {
        kind: CloseTagStart,
        start: 254,
        end: 256,
    },
    Html5Token {
        kind: ElementName,
        start: 256,
        end: 262,
    },
    Html5Token {
        kind: TagEnd,
        start: 262,
        end: 263,
    },
    Html5Token {
        kind: TextContent,
        start: 263,
        end: 264,
    },
    Html5Token {
        kind: CloseTagStart,
        start: 264,
        end: 266,
    },
    Html5Token {
        kind: ElementName,
        start: 266,
        end: 270,
    },
    Html5Token {
        kind: TagEnd,
        start: 270,
        end: 271,
    },
    Html5Token {
        kind: TextContent,
        start: 271,
        end: 272,
    },
    Html5Token {
        kind: CloseTagStart,
        start: 272,
        end: 274,
    },
    Html5Token {
        kind: ElementName,
        start: 274,
        end: 278,
    },
    Html5Token {
        kind: TagEnd,
        start: 278,
        end: 279,
    },
    Html5Token {
        kind: Eof,
        start: 279,
        end: 279,
    },
]
