languages/html/umc_html_parser/src/lexer/snapshots/umc_html__lexer__test__self_close_script_tag.snap
---
source: languages/html/umc_html_parser/src/lexer/mod.rs
expression: test(HTML_STRING)
---
[
    Token {
        kind: TextContent,
        start: 0,
        end: 6,
    },
    Token {
        kind: Doctype,
        start: 6,
        end: 15,
    },
    Token {
        kind: Whitespace,
        start: 15,
        end: 16,
    },
    Token {
        kind: Attribute,
        start: 16,
        end: 20,
    },
    Token {
        kind: TagEnd,
        start: 20,
        end: 21,
    },
    Token {
        kind: TextContent,
        start: 21,
        end: 22,
    },
    Token {
        kind: TagStart,
        start: 22,
        end: 23,
    },
    Token {
        kind: ElementName,
        start: 23,
        end: 27,
    },
    Token {
        kind: Whitespace,
        start: 27,
        end: 28,
    },
    Token {
        kind: Attribute,
        start: 28,
        end: 32,
    },
    Token {
        kind: Eq,
        start: 32,
        end: 33,
    },
    Token {
        kind: Attribute,
        start: 33,
        end: 37,
    },
    Token {
        kind: TagEnd,
        start: 37,
        end: 38,
    },
    Token {
        kind: TextContent,
        start: 38,
        end: 39,
    },
    Token {
        kind: TagStart,
        start: 39,
        end: 40,
    },
    Token {
        kind: ElementName,
        start: 40,
        end: 44,
    },
    Token {
        kind: TagEnd,
        start: 44,
        end: 45,
    },
    Token {
        kind: TextContent,
        start: 45,
        end: 48,
    },
    Token {
        kind: TagStart,
        start: 48,
        end: 49,
    },
    Token {
        kind: ElementName,
        start: 49,
        end: 53,
    },
    Token {
        kind: Whitespace,
        start: 53,
        end: 54,
    },
    Token {
        kind: Attribute,
        start: 54,
        end: 61,
    },
    Token {
        kind: Eq,
        start: 61,
        end: 62,
    },
    Token {
        kind: Attribute,
        start: 62,
        end: 69,
    },
    Token {
        kind: TagEnd,
        start: 69,
        end: 70,
    },
    Token {
        kind: TextContent,
        start: 70,
        end: 73,
    },
    Token {
        kind: TagStart,
        start: 73,
        end: 74,
    },
    Token {
        kind: ElementName,
        start: 74,
        end: 78,
    },
    Token {
        kind: Whitespace,
        start: 78,
        end: 79,
    },
    Token {
        kind: Attribute,
        start: 79,
        end: 83,
    },
    Token {
        kind: Eq,
        start: 83,
        end: 84,
    },
    Token {
        kind: Attribute,
        start: 84,
        end: 94,
    },
    Token {
        kind: Whitespace,
        start: 94,
        end: 95,
    },
    Token {
        kind: Attribute,
        start: 95,
        end: 102,
    },
    Token {
        kind: Eq,
        start: 102,
        end: 103,
    },
    Token {
        kind: Attribute,
        start: 103,
        end: 142,
    },
    Token {
        kind: TagEnd,
        start: 142,
        end: 143,
    },
    Token {
        kind: TextContent,
        start: 143,
        end: 146,
    },
    Token {
        kind: TagStart,
        start: 146,
        end: 147,
    },
    Token {
        kind: ElementName,
        start: 147,
        end: 152,
    },
    Token {
        kind: TagEnd,
        start: 152,
        end: 153,
    },
    Token {
        kind: TextContent,
        start: 153,
        end: 161,
    },
    Token {
        kind: CloseTagStart,
        start: 161,
        end: 163,
    },
    Token {
        kind: ElementName,
        start: 163,
        end: 168,
    },
    Token {
        kind: TagEnd,
        start: 168,
        end: 169,
    },
    Token {
        kind: TextContent,
        start: 169,
        end: 170,
    },
    Token {
        kind: CloseTagStart,
        start: 170,
        end: 172,
    },
    Token {
        kind: ElementName,
        start: 172,
        end: 176,
    },
    Token {
        kind: TagEnd,
        start: 176,
        end: 177,
    },
    Token {
        kind: TextContent,
        start: 177,
        end: 178,
    },
    Token {
        kind: TagStart,
        start: 178,
        end: 179,
    },
    Token {
        kind: ElementName,
        start: 179,
        end: 183,
    },
    Token {
        kind: TagEnd,
        start: 183,
        end: 184,
    },
    Token {
        kind: TextContent,
        start: 184,
        end: 187,
    },
    Token {
        kind: TagStart,
        start: 187,
        end: 188,
    },
    Token {
        kind: ElementName,
        start: 188,
        end: 194,
    },
    Token {
        kind: Whitespace,
        start: 194,
        end: 195,
    },
    Token {
        kind: SelfCloseTagEnd,
        start: 195,
        end: 197,
    },
    Token {
        kind: TextContent,
        start: 197,
        end: 198,
    },
    Token {
        kind: CloseTagStart,
        start: 198,
        end: 200,
    },
    Token {
        kind: ElementName,
        start: 200,
        end: 204,
    },
    Token {
        kind: TagEnd,
        start: 204,
        end: 205,
    },
    Token {
        kind: TextContent,
        start: 205,
        end: 206,
    },
    Token {
        kind: CloseTagStart,
        start: 206,
        end: 208,
    },
    Token {
        kind: ElementName,
        start: 208,
        end: 212,
    },
    Token {
        kind: TagEnd,
        start: 212,
        end: 213,
    },
    Token {
        kind: Eof,
        start: 213,
        end: 213,
    },
]
